apps/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  labels:
    app: lldap
spec:
  selector:
    app: lldap
  ports:
    - name: ldap
      port: 3890
      targetPort: 3890
      protocol: TCP
    - name: web
      port: 17170
      targetPort: 17170
      protocol: TCP
    # PostgreSQL is not exposed here so that it can't be directly accessed by other Pods
